# SteveCTOS

./: .bashrc  .gitignore  CMakeLists.txt  CreateAllUsers.sh  CreateBashrcEntries.sh  CreateGroupAllUsers.sh  CreatePasswordsAllUsers.sh  CreateUpdateBashrcEntries.sh  CreateUpdateBashrcEntriesTemp.sh  README.md  Teamviewer.txt  UserList.txt  contributors.txt  fstab-17.3Mint  fstab-19.3-New  fstab-19.3MintOrig  log on.txt  makelink.bat  makelink.py  pdftk.txt  source  steve.bashrc  sysctl.conf  vince.bashrc
Python3/: MailGunTest.py  MailgunTest2.py  MailgunTest3.py  PrintInvoice  PrintPaySlyps.sh  PrintPayTax.sh  PrintStatementPdfOnly  PrintWMans.sh  Record  fohtotext.py  fohtotext.py.bak  renamecc.py  renamefnbcams.py  renamemain.py  renamepay.py  renamepen.py  renamewmans.py  text2pdf
ascii/: CMakeLists.txt
cobol/: BaUpMenu.cob  Bm1Menu.cob  BmAnalCh.cob  BmKitCop.cob  BmKitMfg.cob  BmKitsIq (copy).cob  BmKitsIq.cob  BmKitsMt.cob  BmKitsRp.cob  BmKtAnRp.cob  BmKtChMt.cob  BmKtItIq.cob  BmKtLiRp.cob  BmKtMfIq.cob  BmKtMfLy.cob  BmKtQyMt.cob  BmKtRgRp.cob  BmNewItm.cob  CMakeLists.txt  CODATAXX.cob  Cb1Menu.cob  CbBankTr.cob  CbCAMSAl.cob  CbCAMSMt.cob  CbCamsAl.cob  CbCamsMt.cob  CbGlPost.cob  CbMaLyIq.cob  CbMastIq.cob  CbMastMt.cob  CbPerEnd.cob  CbStAlMt.cob  CbStatRp.cob  CbTrFuIq.cob  CbTrLyIq.cob  CbTrLyIq.cob-old  CbTrOsRp.cob  CbTranIq.cob  CbTranMv.cob  CbTrans.cob  (+373 more)
cobol/Update/: CB1MENU.FRP  CMakeLists.txt  Cb1Menu.cob  CbTranMv.cob  CheckDataNamePosition  ChlfdCbTrans1  ChlfdLinkage  CrTransMv.cob  MainCont.cob  PassWrds.cob
cobol/copy/: CTOSCobolAccept  CTOSLinuxKeyCodes.txt  CentreMessageInfo  CheckDataNamePosition  CheckDataNames  CheckEmailForValidity  CheckForPause  CheckMenuDataNames  ClearFormOfis  ClearFormStock  ClearScreen  ComputeAssociatePrices  ComputeAssociatePricesAA  ComputeCRDatePeriod  ComputeDatePeriod  ComputeDatePeriodReset  ComputeGLDatePeriod  ComputeSpecialPrices  ComputeSpecialPricesAA  ConvertDateFormat  CreditorPassword  Data-Names  DateConvert  DateConvertFix  DebtorSpecPassword  DecimaliseRate  DelayRoutine  DeleteBlankEmailCrnRecord  DeleteBlankEmailInvRecord  DeleteBlankEmailStateRecord  DisplayCBNoTopInfo  DisplayCBTopInfo  DisplayCrTopInfo  DisplayForm  DisplayFormCBTopInfo  DisplayFormCRTopInfo  DisplayFormGLTopInfo  DisplayProgNum  DisplayStockPhoto  EnterCRPeriodDates  (+231 more)
cobol/fd/: ChkfdStockAlpha  ChlfDNEWCREDNUM  ChlfdBankCAMS  ChlfdBooze  ChlfdBoozers  ChlfdCbTransLy  ChlfdCoPrinters  ChlfdCoPrintersASCII  ChlfdCoPrintersRemote  ChlfdCompany  ChlfdCompanyASCII  ChlfdCrAlias  ChlfdCrCAMSTrans  ChlfdCrCAMSTrans1  ChlfdCrCheques-ORIG  ChlfdCrCurr  ChlfdCrFBCHeader  ChlfdCrPay  ChlfdCrRemiTrans  ChlfdCrRemit  ChlfdCrTrans  ChlfdCrTrans1  ChlfdCreditor  ChlfdCreditorOld  ChlfdDaily  ChlfdDataName  ChlfdDataNameASCII  ChlfdDebtor1  ChlfdDebtorOld  ChlfdDisTot  ChlfdDrCont  ChlfdDrTrans  ChlfdDrTrans1  ChlfdFaxParam  ChlfdGlJrn  ChlfdGlMastLy  ChlfdGlParam  ChlfdGlTrans  ChlfdGlTrans1  ChlfdImpReceipts  (+39 more)
config/: DB_CONFIG
data/: BAUPMENU.FRP  BM1MENU.FRP  BMKITCOP.FRP  BMKITMFG.FRP  BMKITSIQ.FRP  BMKITSMT.FRP  BMKTITIQ.FRP  CB1MENU.FRP  CBBANKTR.FRP  CBCAMSAL.FRP  CBCAMSMT.FRP  CBMALYIQ.FRP  CBMASTER.FRP  CBSTALMT.FRP  CBTRANIQ.FRP  CBTRANS.FRP  CBTRFUIQ.FRP  CBTRLYIQ.FRP  COCSPARM.FRP  COFXPARM.FRP  COMPANY.FRP  CONTMENU.FRP  COPRNTMT.FRP  COPUBYMT.FRP  COQUPARM.FRP  CORPPARM.FRP  COSTFFIQ.FRP  COSTFFMT.FRP  CR1MENU.FRP  CR2MENU.FRP  CR3MENU.FRP  CR4MENU.FRP  CRADJUIQ.FRP  CRALIAS.FRP  CRCAMSIQ.FRP  CRCAMSMT.FRP  CRCURRMT.FRP  CRFBCMT.FRP  CRFBCTRS.FRP  CRINCRMT.FRP  (+144 more)
data01/: BankCamsTrans  BmMaster  BmMaster.1  CbMaster  CbMaster.1  CbMasterLy  CbMasterLy.1  CbTrans  CbTrans.1  CbTrans.2  CbTransLy  CbTransLy.1  CbTransLy.2  CoCashSales  CoCompany  CoDataName  CoFaxParam  CoMenu  CoPrinters  CoPrintersRemote  CoPrintersRemote1  CoPrintersRemote3  CoPrintersRemote7  CoPrintersRemote8  CoPullBy  CoPullers  CoStaffInOut  CrAlias  CrCamsTrans  CrCheques  CrCurrency  CrFBCHeader  CrFBCTrans  CrFBCTrans.1  CrJrn  CrJrn.1  CrJrn.2  CrJrn.3  CrMaster  CrMaster.1  (+114 more)
decode/: CMakeLists.txt  _accept_.c  _globals_.c  _keyboard_.c  _mutex_.c  _show_clock_.c  _statics_.c  _utility_.c  _windowing_.c  archive.c  archive.h  b20codes.c  b20codes.c~  b20codes.txt  b20forms.c  b20forms.h  binio.c  binio.h  cobcalls.c  ctosio.atg  ctosio.c  ctosio.h  ctoskbd.h  decode.cpp  decode.h  fohtotext.nim  genscreen.py  getargs.cpp  getargs.h  header.cpp  header.h  record.c  showpic.cpp  sox.cpp  sox.h  submit.c  submit_popen.c  submits.py  tester.c  tester.h  (+5 more)
installs/: .bashrc  .bashrc-exit  .bashrc-noexit  CMakeLists.txt  OrigCTOS.bashrc  b20codes.kbd  ddexport.sh  login.py  terminal
pascal/: .gitignore
print/: 01QuoteOverlay1.pdf-BAD  Auto01.sh  AutoAllocations.Sub01  AutoAllocations.Sub07  Backup03  Backup05  CMakeLists.txt  GlMonthTemp  GlMonthly  GlMonthly.Sub  InvoiceOverlay01.pdf--ORIG  PrintCams-SplBStr.sh  PrintCams-SplCheque.sh  PrintCredit  PrintCreditPdfEmail  PrintCreditPdfOnly  PrintDrOverdue1  PrintDrOverdue2  PrintInvoice  PrintInvoice--Save  PrintInvoice>Save  PrintInvoicePDFOnly  PrintInvoicePdfEmail  PrintInvoicePdfEmail-orig  PrintInvoicePdfOnly  PrintMergeDrOverdue  PrintMergePOrder  PrintMergeQuote  PrintMergeRemit  PrintPOrder1  PrintPOrder2  PrintPOrderPdfEmailOnly  PrintPdf.sh  PrintQuote1  PrintQuote2  PrintRemit1  PrintRemit2  PrintStatement  PrintStatementNoMail  PrintStatementPdfEmailOnly  (+15 more)
putty/: randomseed  sshhostkeys
submit/: AUTOALLO.SUB03  Auto01.sh  Auto03.sh  Auto07.sh  Auto08.sh  AutoAllocations.Sub01  AutoAllocations.Sub03  AutoAllocations.Sub07  AutoAllocations.Sub08  Backup03.sh  Backup05.sh  Backup06.sh  Backup07.sh  BackupCtools.sh  Branch01.Sub  Branch01.sh  Branch03.Sub  Branch03.sh  Branch07.Sub  Branch07.sh  Branch08.Sub  Branch08.sh  CMakeLists.txt  CrMaint.Sub01  CrMaint.sh  DB_CONFIG  DDCreateImage.sh  DDCreateImage.sh-orig  DDCreateImage1.sh  DDCreateImage2.sh  DataTestAll.sh  Deadlock.sh  Doculogix.sh  DoculogixPDF.sh  DoculogixPDF1.sh  DoculogixPDF2.sh  (+225 more)
tools/cocoR/cpp/: CMakeLists.txt
(+1240 files in other folders)
